--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -18,19 +18,16 @@ knitr::opts_chunk$set(echo = FALSE,
                       fig.width = 7)
 ```
 
+R is an open-source programming language. It is known for extensive statistical capabilities, and also has powerful graphical capabilities. Another benefit of R is the large and generally helpful user-community. This includes R-package developers who create packages that can be easily installed to enhance the basic R capabilities. This article will describe the R-package "dataRetrieval" which simplifies the process of finding and retrieving water from the U.S. Geological Survey and other agencies.
+
+It is increasingly common for large-scale `dataRetrieval` requests. Geographically-large requests can be done by looping through either state codes (`stateCd$STATE`) or HUCs. BUT without careful planning, those requests could be too large to complete. This article will describe some tips to make those queries manageable.
+
 # Package Overview
 
-`dataRetrieval` is available on the CRAN repository. The CRAN version is the most stable and user-tested:
+`dataRetrieval` is available on Comprehensive R Archive Network (CRAN).
 
 ```{r echo=TRUE, eval=FALSE}
 install.packages("dataRetrieval")
-```
-
-The cutting-edge version of `dataRetrieval` can be installed using the `remotes` package which pulls from GitHub. This version will have newer changes than what is on CRAN, but potentially more fragile.
-
-```{r echo=TRUE, eval=FALSE}
-library(remotes)
-install_github("USGS-R/dataRetrieval")
 ```
 
 Once the `dataRetrieval` package has been installed, it needs to be loaded in order to use any of the functions:
@@ -63,9 +60,9 @@ USGS data comes from the National Water Information System (NWIS). There are man
 
 ```{r}
 df <- data.frame(Type = c("Unit", "Daily", "Discrete"),
-                 Description = c("Regular frequency data reported from a sensor (e.g. 15 minute interval)",
-                                   "Data aggregated to a daily statistic such as mean, min, or max",
-                                   "Data collected at non-regular times"),
+                 Description = c("Regular frequency data reported from a sensor (e.g. 15 minute interval). This data can include 'real-time' data",
+                                   "Data aggregated to a daily statistic such as mean, min, or max.",
+                                   "Data collected at non-regular times."),
                  service = c("uv", "dv", 
                                "water quality (qw), groundwater (gwlevel), rating curves (rating), peak flow (peak), surfacewater (meas)"))
 
@@ -82,8 +79,8 @@ The USGS uses various codes for basic retrievals. These codes can have leading z
 * Site ID (often 8 or 15-digits)
 * Parameter Code (5 digits)
     + Full list:
-    + [http://help.waterdata.usgs.gov/code/parameter_cd_query?fmt=rdb&inline=true&group_cd=%](http://help.waterdata.usgs.gov/code/parameter_cd_query?fmt=rdb&inline=true&group_cd=%)
-    + Alternatively use `readNWISpCode()`
+    + [https://nwis.waterdata.usgs.gov/usa/nwis/pmcodes](https://nwis.waterdata.usgs.gov/usa/nwis/pmcodes)
+    + Alternatively use `readNWISpCode("all")`
 * Statistic Code (for daily values)
     + Full list:
     + [http://help.waterdata.usgs.gov/code/stat_cd_nm_query?stat_nm_cd=%25&fmt=html](http://help.waterdata.usgs.gov/code/stat_cd_nm_query?stat_nm_cd=%25&fmt=html)
@@ -258,8 +255,38 @@ knitr::include_graphics("waterservices.png")
 
 ```
 
-Available geographic filters are individual site(s), a single state, a bounding box, or a HUC (hydrologic unit code). For example, let's see which sites ever measured phosphorus in Arizona:
+Available geographic filters are individual site(s), a single state, a bounding box, or a HUC (hydrologic unit code). See examples for those services by looking at the help page for the `readNWISdata` function:
 
+Here are a few examples:
+
+```{r eval=FALSE}
+# Daily temperature in Ohio
+dataTemp <- readNWISdata(stateCd = "OH", 
+                         parameterCd = "00010",
+                         service="dv") 
+
+# Real-time discharge at a site
+instFlow <- readNWISdata(sites = "05114000",
+                         service = "iv", 
+                         parameterCd = "00060", 
+                         startDate = "2014-05-01T00:00Z",
+                         endDate = "2014-05-01T12:00Z",
+                         tz = "America/Chicago") 
+
+# Temperature within a bounding box:
+bBoxEx <- readNWISdata(bBox = c(-83,36.5,-81,38.5),
+                       parameterCd = "00010")
+
+# Groundwater levels within a HUC:
+groundwaterHUC <- readNWISdata(huc="02070010",
+                               service="gwlevels")
+
+```
+  
+
+### Arizona Example
+
+For example, let's see which sites ever measured phosphorus in Arizona:
 
 ```{r az, echo=TRUE}
 AZ_sites <- whatNWISsites(stateCd = "AZ", 
@@ -287,8 +314,10 @@ Now let's see what we get back from the `whatNWISdata` function:
 ```{r azdata, echo=TRUE}
 AZ_data <- whatNWISdata(stateCd = "AZ", 
                          parameterCd = "00665")
-
+names(AZ_data)
 ```
+
+We get many more columns returned. For discovering useful data, the last 3 columns of this return are especially helpful. "begin_date", "end_date", and "count_nu" give a good indication of how much data of a particular "parm_cd"/"stat_cd"/"data_type_cd" was collected.
 
 ```{r echo=FALSE, eval=TRUE}
 library(dplyr)
@@ -302,22 +331,17 @@ datatable(AZdata2, rownames = FALSE,options = list(pageLength = 8))
 
 ###  Additional NWIS discovery tools
 
+Our team is actively working on making our data more discoverable. For now, we encourage you to use interactive mappers such as:
 
-Point-and-click mappers (good for general overviews):
-NWIS Mapper:
+The NWIS Mapper:
 [http://maps.waterdata.usgs.gov/mapper/index.html](http://maps.waterdata.usgs.gov/mapper/index.html)
 
-New NWIS dashboard:
-[https://dashboard.waterdata.usgs.gov/app/nwd/?region=lower48](https://dashboard.waterdata.usgs.gov/app/nwd/?region=lower48)
+The National Water Dashboard:
+[https://dashboard.waterdata.usgs.gov/app/nwd](https://dashboard.waterdata.usgs.gov/app/nwd)
 
+### Wisconsin Example 
 
-See how to use those services by looking at the help page for the `readNWISdata` function:
-
-```{r eval=FALSE, echo=TRUE}
-?readNWISdata
-````
-
-Let's do one more example, we'll look for long-term USGS phosphorous data in Wisconsin:
+Let's do one more example, we'll look for long-term USGS phosphorous data in Wisconsin. This time, we will take the information from the `whatNWISdata` function, filter down the sites to exactly our interest, and then get the data. Let's say we want data from sites that have been collecting data for at least 15 years and have at least 300 measurements:
 
 ```{r echo=TRUE, eval=TRUE}
 pCode <- c("00665")
@@ -380,47 +404,10 @@ leaflet(data=phos_summary) %>%
         
 ```
 
-    
-##  Flexible data retrieval: readNWISdata 
+ 
+# Multi-Agency Water Quality Data from the Water Quality Portal (WQP)
 
-We can use the function `readNWISdata` to get the data from more complicated data requests. The help page for this function has many examples.
-
-You can request data for individual sites, states, a bounding box, HUC:
-
-```{r eval=FALSE, echo=TRUE}
-
-dataTemp <- readNWISdata(stateCd = "OH", 
-                         parameterCd = "00010",
-                         service="dv")
-
-instFlow <- readNWISdata(sites = "05114000",
-                         service = "iv", 
-                         parameterCd = "00060", 
-                         startDate = "2014-05-01T00:00Z",
-                         endDate = "2014-05-01T12:00Z",
-                         tz = "America/Chicago")
-
-bBoxEx <- readNWISdata(bBox = c(-83,36.5,-81,38.5),
-                       parameterCd = "00010")
-
-groundwaterHUC <- readNWISdata(huc="02070010",
-                               service="gwlevels")
-
-```
-    
-# Water Quality Portal (WQP)
-
-[Water Quality Portal](http://www.waterqualitydata.us/)
-
-* Multiple agencies
-    + USGS data comes from the NWIS database
-    + EPA data comes from the STORET database (this includes many state, tribal, NGO, and academic groups)
-
-* WQP brings data from all these organizations together and provides it in a single format
-
-* More verbose output than NWIS
-
-* To get non-NWIS data, need to use CharacteristicName instead of parameter code.
+`dataRetrieval` also allows users to access data from the [Water Quality Portal](http://www.waterqualitydata.us/). The WQP houses data from multiple agencies; while USGS data comes from the NWIS database, EPA data comes from the STORET database (this includes many state, tribal, NGO, and academic groups). The WQP brings data from all these organizations together and provides it in a single format that has a more verbose output than NWIS. To get non-NWIS data, need to use CharacteristicName instead of parameter code.
 
 
 ## WQP Basic Retrievals
@@ -450,7 +437,7 @@ nrow(wqpQW)
 
 The value of the Water Quality Portal is to explore water quality data from different sources. 
 
-The following function returns sites that have collected phosphorus data in Wisconsin. There's no way to know if that site has collected one sample, or thousands. This function is pretty fast, but only reports what sites have data.
+The following function returns sites that have collected phosphorus data in Wisconsin. There's no way to know if that site has collected one sample, or thousands. This function is pretty fast, but only reports which sites have data.
 
 ```{r echo=TRUE, eval=FALSE}
 
@@ -478,7 +465,7 @@ phosData <- readWQPdata(siteNumbers = phos_data_sites_to_get$MonitoringLocationI
 
 ```
 
-With data coming from many different agencies, it will be important to look carefully at the returned data. For instance, this "Phosphorus" data comes back with many different units. It will be important to make smart decisions on how and if the total data can be used together.
+With data coming from many different agencies, it will be important to carefully review the returned data. For instance, this "Phosphorus" data comes back with many different units. It will be important to make smart decisions on how and if the queried data can be used together.
 
 ```{r echo=TRUE, eval=FALSE}
 unique(phosData$ResultMeasure.MeasureUnitCode)
@@ -547,20 +534,17 @@ leaflet(data=wiSummary) %>%
 
 # Large Data Requests
 
-It is increasingly common for R users to be interested in large-scale `dataRetrieval` analysis. A few tips to make those queries managable:
+It is increasingly common for R users to be interested in large-scale `dataRetrieval` analysis. You can use a loop of either state codes (`stateCd$STATE`) or HUCs to make large requests. BUT without careful planning, those requests could be too large to complete. Here are a few tips to make those queries manageable:
 
 * Please do NOT use multi-thread processes and simultaneously request hundreds or thousands of queries.
 
-* You can use a loop of either state codes (`stateCd$STATE`) or HUCs to make large requests. BUT without careful planning, those requests could be too large to complete. 
+* Take advantage of the `whatWQPdata` and `whatNWISdata` functions to filter out sites you don't need before requesting the data. Use what you can from these faster requests to filter the full data request as much as possible. 
 
+* Think about using `tryCatch`, saving the data after each iteration of the loop, and/or using a make-like data pipeline (for example, see the `drake` package). This way if a single query fails, you do not need to start over.
 
-+ Take advantage of the `whatWQPdata` and `whatNWISdata` functions to filter out sites you don't need before requesting the data. Use what you can from these faster requests to filter the full data request as much as possible. 
+* The WQP doesn't always perform that well when there are a lot of filtering arguments in the request. Even though those filters would reduce the amount of data needed to transfer, that sometimes causes the pre-processing of the request to take so long that it times-out before returning *any* data. It's a bit counterintuitive, but if you are having trouble getting your large requests to complete, remove arguments such as Sample Media, Site Type, these are things that can be filtered in a post-processing script. Another example: sometimes it is slower and error-prone requesting data year-by-year instead of requesting the entire period of record. 
 
-+ Think about using `tryCatch`, saving the data after each iteration of the loop, and/or using a make-like data pipeline (for example, see the `drake` package). This way if a single query fails, you do not need to start over.
-
-+ The WQP doesn't always perform that well when there are a lot of filtering arguments in the request. Even though those filters would reduce the amount of data needed to transfer, that sometimes causes the pre-processing of the request to take so long that it times-out before returning *any* data. It's a bit counterintuitive, but if you are having trouble getting your large requests to complete, remove arguments such as Sample Media, Site Type, these are things that can be filtered in a post-processing script. Another example: sometimes it is slower and error-prone requesting data year-by-year instead of requesting the entire period of record. 
-
-Pick a single state/HUC/bbox to practice your data retrievals before looping through larger sets, and optimize ahead of time as much as possible.
+* Pick a single state/HUC/bbox to practice your data retrievals before looping through larger sets, and optimize ahead of time as much as possible.
 
 
 # But wait, there's more!
@@ -569,7 +553,7 @@ There are two services that also have functions in `dataRetrieval`, the National
 
 ## National Groundwater Monitoring Network (NGWMN)
 
-Similar to WQP, it brings groundwater data from multiple sources into a single database. There are currently a few `dataRetrieval` functions included:
+Similar to WQP, the NGWMN brings groundwater data from multiple sources into a single location. There are currently a few `dataRetrieval` functions included:
 
 
 *  `readNGWMNsites()`
@@ -580,6 +564,7 @@ Similar to WQP, it brings groundwater data from multiple sources into a single d
 
 The NLDI provides a information backbone to navigate the NHDPlusV2 network and discover features indexed to the network. For an overview of the NLDI, see: [http://usgs-r.github.io/dataRetrieval/articles/nldi.html](http://usgs-r.github.io/dataRetrieval/articles/nldi.html)
 
+There is currently one function in dataRetrieval for NLDI: 
 
 `findNLDI()`
 
