--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-dataRetrieval 2.7.6
+dataRetrieval 2.7.7
 ==================
 * The NLDI service is now available through the `findNLDI` function.
 * Adjusted Water Quality Portal (WPQ) URLs to follow new structure
@@ -6,6 +6,7 @@ dataRetrieval 2.7.6
 * Added an argument to readWQPdata to ignore fetching site and parameter attributes.
 * Fixed timezone bug in RDB requests that had mixed timezones.
 * Updated internal data for parameter codes
+* Added parameterCd argument to readNWISgwl as the services had changed
 
 dataRetrieval 2.7.5
 ==========
