--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ dataRetrieval 2.7.8
 ==================
 * Fixed missing comments in readNWISqw
 * Added Stable Isotopes, Habitat, and Other water quality groupings
-* Added option to not check for headers on WQP requests.
+* Adding options for updated readr
 
 dataRetrieval 2.7.7
 ==================
